2014-03-24 2.2发布
后台设置logo页面调整
论坛帖子用户信息调整
调整反馈，将留言、评论、主题、回帖，将其集中在一起。
添加微信公众号接入功能
添加公众号会员查看功能
添加公众号消息管理功能
添加公众号菜单、关键字、订阅回复、默认回复的管理功能
新增宽屏主题
前台添加微信公众号和手机访问二维码显示
禁止百度自动转码。

2014-03-03 2.1发布
如果公司没有写创建年份的话，去掉copyright里面的-号
调整联系我们区块左侧文字的宽度
论坛帖子最后编辑者改为真实姓名
关于我们页面使用区块把联系我们放在右侧
批量维护手册章节的时候添加发布时间
编辑手册文章的时候增加发布时间的字段
重新调整h1-h6标签的字体大小
解决置顶帖子用户姓名问题
修改版权提示的格式
修复分页的bug
幻灯排序在ie10下面有问题。
修复ie10下面蓝色风格的问题
图文新闻和图文产品样式需要重新调整下
首页的新闻列表应当显示日期
精简文章详情页面的上一篇下一篇的导航文字
调整p标签的margin
调整留言页面回复内容的缩进和字体大小
调整默认风格留言页面的导航颜色
优化移动版本头尾的处理
解决切换方案之后缩进问题
已登录用户发表评论和留言的时候，应当取其真实姓名
管理员身份回帖的时候应当使用全编辑器
论坛帖子发贴框的宽度调整。把只读放在后面。
调整论坛列表页面各列的宽度
以管理员身份发表评论或者留言，默认状态为通过。
后台管理员回复一篇评论或留言之后，默认将其状态改为通过
修改邮箱默认配置，将腾讯邮箱默认改为465
如果发贴用户已被删除，帖子列表页面的最后回复取用户名
论坛出现版主的地方也都显示真实姓名
将user模块的getRealName()方法改为getRealNamePairs()
把style:width的写法换掉
单页在站点地图里面
调整模拟的alert和confirm框的样式
记录图片附件的尺寸，输出的时候写入到data-width data-hegiht标签里面
论坛的用户注册和登录日期显示友好信息
论坛帖子列表的时候显示用户的真实姓名
页面布局的时候可以设置区块是否显示标题、边框
留言者要区分是否是登录用户
论坛的板块设置提示需要二级板块
调整下区块首页底部的命名，改为中部。
调整文章，产品无类目时的交互方式
重置密码功能把resetKey，resetTime合成一个字段
论坛控制图片大小

2014-01-11 2.0.1发布
博客列表应该显示文章的作者，评论数，阅读数。
论坛帖子列表页面显示版主和最后回复realname
后台管理员allowtags增加style
解决ie9验证码显示BUg
自定义区块直接显示标题和边框
返回顶部按钮样式调整
编辑手册文章时候编辑器要放大。
友情链接功能编辑器使用full菜单。
区块里面的页面也改成单页
描述里面的内容被specialchars处理了，升级之后需要处理这个数据。
别名里面的.也被换成了-
后台文章列表时类目宽度调宽，可以显示两个类目的宽度。
文章里面的h4标题太大了。调整h标签的大小
文章详情和摘要之间的间距有些太大啦。
编辑器里面标签的换行符去掉。
编辑器里面p标记的的间距去掉。前台的p标记的样式也都去掉。
文章图片幻灯切换的箭头去掉背景的阴影
ie8下面的幻灯文字尺寸位置不对。点击切换按钮的那个虚线去掉。
博客列表图片大小限制
文章列表里面的图片宽度和高度控制下
论坛控制图片大小
后台公司联系方式增加联系人字段
重置密码功能把resetKey，resetTime合成一个字段
解决二级路径安装的访问问题
站点描述不应该使用富文本编辑器。
验证码如果数字为0的时候，还是验证不通过
将导航条里面订阅移至右侧，放在区块里面，默认显示。
区块列表里面的最新产品标题和价格应当换行
产品列表的分页导航应当显示精简的记录
sitemap里面去掉CDATA，&替换成&amp;
蓝色风格下面首页最新动态，最新文章的更多看不到了。
文章，博客，单页，产品里面的关键词链接颜色去掉。
为蝉知org网站配置发信参数
测试发信如果管理员没有设置邮箱的话，没有测试发信功能。
logo提示尺寸
分享按钮样式对齐
reset邮件内容挪到模板里面
修复编辑文章时候发布时间变成编辑时间的bug
优化附件图片幻灯片获取图片尺寸功能
修改首页title规则

2014-01-01 2.0发布

UI框架从Bootstrap转到ZUI
新增单页、论坛、留言、博客区块管理功能
解决了导航、评论等功能的bug
UI改进

2013-13-14 1.8发布

添加留言功能
添加文章草稿功能
添加favicon管理功能
添加源代码区块功能
非编辑器表单提交内容自动过滤HTML
添加附件编辑功能