@@ -1,3 +1,13 @@
+2014-03-31 2.2.1发布
+调整评论页面的文案。
+联系我们页面增加二维码展示。 
+密码登录失败5次，禁用3分钟。
+博客列表页面的评论可以直接点击过去，到评论页面。
+会员部分没有显示微博和qq的会员
+建议修改QQ的连 接方式http://www.chanzhi.org/thread/164.html#373
+把oauth里面的链接get把file_get_contents去掉。改用微信api里面的链接方式。
+解决php magic_quotes_gpc 打开时中文内容存储失败的bug。
+
 2014-03-24 2.2发布
 后台设置logo页面调整
 论坛帖子用户信息调整
